# viral-rna-simulation

./: README.md  pyproject.toml
src/mutation_simulation/: cell.py  cells.py  cli.py  genome.py  rna.py  simulate.py  site.py  utils.py
src/viral_rna_simulation/: cell.py  cells.py  cli.py  genome.py  plot.py  rna.py  simulate.py  site.py
test/: test_cell.py  test_cells.py  test_genome.py  test_rna.py  test_utils.py
