[project]
name = "viral-rna-simulation"
version = "0.1.0"
description = "A simulation of replication of viral RNA"
readme = "README.md"
authors = [
    { name = "terrycojones", email = "terence.jones@charite.de" }
]
requires-python = ">=3.13"
dependencies = [
    "kaleido>=0.2.1",
    "plotly[express]>=6.0.0",
    "polars>=1.25.2",
]

[project.scripts]
viral-rna-simulation = "viral_rna_simulation.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.uv]
# The kaleido constraint is added due to https://github.com/astral-sh/uv/issues/12032
constraint-dependencies = ["kaleido==0.2.1"]
